Fix gap on right side of page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,6 +5,8 @@ $navbar-offset-open: 252px;
   margin: 0;
 }
 
+html, body { overflow-x: hidden; }
+
 html {
   height: 100%;
   width: 100%;
