--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -104,7 +104,7 @@ $dull-text: rgba(255, 255, 255, 0.85);
   font-size: 1.87rem;
   li a {
     @include bp(pc) {
-      //padding-left: 20px;
+      margin-left: 20px;
       @include border-box;
     }
   }
